--- a/myPortfolio/moki-details.html
+++ b/myPortfolio/moki-details.html
@@ -43,7 +43,7 @@
   <header id="header" class="header dark-background d-flex flex-column">
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
-        <img src="../myPortfolio/assets/img/manette.png" width="90px" height="auto" style="margin-left: 90px;">
+        <img src="assets/img/manette.png" width="90px" height="auto" style="margin-left: 90px;">
 
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
