Adjusted the map in contact section and added border to images in project details

--- a/myPortfolio/game-details.html
+++ b/myPortfolio/game-details.html
@@ -43,8 +43,9 @@
   <header id="header" class="header dark-background d-flex flex-column">
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
-        <img src="assets/img/manette.png" width="90px" height="auto" style="margin-left: 90px;">
-
+        <a href="index.html#hero">
+          <img src="assets/img/manette.png" width="90px" height="auto" style="margin-left: 90px;">
+        </a>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       
@@ -111,10 +112,10 @@
 
               <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide">
+                <div class="swiper-slide" style="border: 5px solid #000000; padding: 10px; border-radius: 10px;">
                   <div class="swiper-slide">
                     <iframe src="https://drive.google.com/file/d/1eytsHQ6biVaq0ZAWQaEJcXx-lHX5Y3Oi/preview" width="100%" height="500px" allowfullscreen></iframe>
-                </div>
+                  </div>
                 </div>
 
               </div>
