--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -46,10 +46,11 @@
 
   <header id="header" class="header dark-background d-flex flex-column">
     <i class="header-toggle d-xl-none bi bi-list"></i>
+      <a href="index.html#hero">
+        <img src="assets/img/manette.png" width="90px" height="auto" style="margin-left: 90px;">
+      </a>
 
-      <img src="assets/img/manette.png" width="90px" height="auto" style="margin-left: 90px;">
-
-    <a href="index.html" class="logo d-flex align-items-center justify-content-center">
+    <a href="index.html#hero" class="logo d-flex align-items-center justify-content-center">
       <h1 class="sitename" style ="color: #000000;">Selim Msolly</h1>
     </a>
 
@@ -559,7 +560,7 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3192.4775821933727!2d10.255688252124212!3d36.85498584730179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12e2caa8ffcdd42b%3A0x370637670504b1a5!2sEl%20Aouina%2C%20Tunis!5e0!3m2!1sfr!2stn!4v1751301288979!5m2!1sfr!2stn" width="465" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21478.60945030756!2d10.252260963259468!3d36.84692090260191!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12e2caa8ffcdd42b%3A0x370637670504b1a5!2sEl%20Aouina%2C%20Tunis!5e0!3m2!1sfr!2stn!4v1751368569731!5m2!1sfr!2stn" width="465" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
         </div>
