--- a/myPortfolio/moki-details.html
+++ b/myPortfolio/moki-details.html
@@ -43,7 +43,9 @@
   <header id="header" class="header dark-background d-flex flex-column">
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
+      <a href="index.html#hero">
         <img src="assets/img/manette.png" width="90px" height="auto" style="margin-left: 90px;">
+      </a>
 
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
@@ -90,7 +92,7 @@
 
         <div class="row gy-4">
             <div class="col-lg-8">
-                <div class="portfolio-details-slider swiper init-swiper">
+                <div class="portfolio-details-slider swiper init-swiper" style="border: 5px solid #000000; padding: 10px; border-radius: 10px;">
 
                 <script type="application/json" class="swiper-config">
                 {
