--- a/myPortfolio/portfolio-details.html
+++ b/myPortfolio/portfolio-details.html
@@ -44,11 +44,11 @@
 
   <header id="header" class="header dark-background d-flex flex-column">
     <i class="header-toggle d-xl-none bi bi-list"></i>
+    <a href="index.html#hero">
+      <img src="assets/img/manette.png" width="90px" height="auto" style="margin-left: 90px;">
+    </a>
 
-    <img src="assets/img/manette.png" width="90px" height="auto" style="margin-left: 90px;">
-
-
-    <a href="index.html" class="logo d-flex align-items-center justify-content-center">
+    <a href="index.html#hero" class="logo d-flex align-items-center justify-content-center">
       <h1 class="sitename" style ="color: #000000;">Selim Msolly</h1>
     </a>
 
@@ -112,7 +112,7 @@
 
               <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide">
+                <div class="swiper-slide" style="border: 5px solid #000000; padding: 10px; border-radius: 10px;">
                   <iframe src="https://drive.google.com/file/d/1SONtZvXTVuHo3-na0jj30x8r-ZJkhljK/preview" width="100%" height="500px" allowfullscreen></iframe>                
                 </div>
 
