deleted unecessary images and function in css, index and javascript as well as deleted starter.html

--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -9,9 +9,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
+  <link href="assets/img/manette.png" rel="icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
 
@@ -30,13 +28,6 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: iPortfolio
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Updated: Jun 29 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="index-page">
@@ -88,9 +79,6 @@
 
     </section><!-- /Hero Section -->
 
-    
-
-
     <!-- About Section -->
     <section id="about" class="about section">
       <!-- Section Title -->
@@ -119,9 +107,7 @@
               </div>
           </div>
         </div>
-
       </div>
-
       <br>
       <br>
       <br>
@@ -156,9 +142,6 @@
       </div>
       </div>
     </section><!-- /About Section -->
-
-
-
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section light-background">
@@ -509,26 +492,19 @@
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
-
-
           </div><!-- End Portfolio Container -->
-
         </div>
-
       </div>
-
     </section><!-- /Portfolio Section -->
 
-    
+
     <!-- Contact Section -->
     <section id="contact" class="contact section">
-
       <!-- Section Title -->
       <div class="container custom-container section-title text-center" data-aos="fade-up">
         <h2>Contact</h2>
         <p>Should you wish to get in touch, my contact details are provided below.</p>
       </div><!-- End Section Title -->
-
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4">
@@ -560,14 +536,14 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21478.60945030756!2d10.252260963259468!3d36.84692090260191!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12e2caa8ffcdd42b%3A0x370637670504b1a5!2sEl%20Aouina%2C%20Tunis!5e0!3m2!1sfr!2stn!4v1751368569731!5m2!1sfr!2stn" width="465" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21478.60945030756!2d10.252260963259468!3d36.84692090260191!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12e2caa8ffcdd42b%3A0x370637670504b1a5!2sEl%20Aouina%2C%20Tunis!5e0!3m2!1sfr!2stn!4v1751368569731!5m2!1sfr!2stn"></iframe>
             </div>
           </div>
         </div>
       </div>
     </section><!-- /Contact Section -->
-
   </main>
+
 
   <footer id="footer" class="footer position-relative light-background" style="color:rgb(255, 255, 255)">
 
@@ -590,7 +566,6 @@
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/typed.js/typed.umd.js"></script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
@@ -604,7 +579,5 @@
   <script src="assets/js/main.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
-
 </html>
