--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -67,9 +67,9 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <!-- <video autoplay loop muted playsinline class="hero-video" data-aos="fade-in">
+      <video autoplay loop muted playsinline class="hero-video" data-aos="fade-in">
         <source src="assets/video/video.mp4" type="video/mp4">
-      </video> -->
+      </video>
       
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
