--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -67,7 +67,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <video autoplay loop muted playsinline class="hero-video" data-aos="fade-in">
+      <video autoplay loop muted playsinline class="hero-video" preload="none">
         <source src="assets/video/video.mp4" type="video/mp4">
       </video>
       
