removed the aos animation from contact section and uncommented the gps map

--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -498,20 +498,20 @@
     </section><!-- /Portfolio Section -->
 
 
-    <!-- Contact Section 
+    <!-- Contact Section  -->
     <section id="contact" class="contact section">
-      <div class="container custom-container section-title text-center" data-aos="fade-up">
+      <div class="container custom-container section-title text-center">
         <h2>Contact</h2>
         <p>Should you wish to get in touch, my contact details are provided below.</p>
       </div>
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <div class="container" >
 
         <div class="row gy-4">
 
           <div class="col-lg-5 mx-auto">
 
             <div class="info-wrap">
-              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
+              <div class="info-item d-flex" >
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
@@ -519,7 +519,7 @@
                 </div>
               </div>
 
-              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
+              <div class="info-item d-flex" >
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Phone number</h3>
@@ -527,7 +527,7 @@
                 </div>
               </div>
 
-              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
+              <div class="info-item d-flex">
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email</h3>
@@ -539,7 +539,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
   </main>
 
 
