--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -21,7 +21,6 @@
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
@@ -72,7 +71,7 @@
       </video>
       
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <div class="container" >
         <h2>Selim Msolly</h2>
         <p>I <span class="typed" data-typed-items="play to develop, 'm a Video Game Developer"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
@@ -82,12 +81,12 @@
     <!-- About Section -->
     <section id="about" class="about section">
       <!-- Section Title -->
-      <div class="container section-title text-center" data-aos="fade-up">
+      <div class="container section-title text-center">
         <h2>About</h2>
         <p>I'm a Teleinformatics Engineer with a solid background in networking and programming. Passionate about video game development, with hands-on experience in game engines; Unity and Unreal Engine. Eager to merge technical expertise with innovative problem-solving techniques to build immersive gaming experiences. Always learning, always growing.</p>
       </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <div class="container">
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
@@ -114,13 +113,13 @@
       <br>
 
       
-      <div class="container section-title text-center" data-aos="fade-up">
+      <div class="container section-title text-center">
         <h2>Languages and tools</h2>
       </div>
 
       <div class="portfolio-wrapper">
 
-      <div class="container overflow-hidden" data-aos="fade-up" data-aos-delay="100">
+      <div class="container overflow-hidden" >
         <div class="scroll-carousel">
           <div class="scroll-track">
             <img src="assets/img/skills/C.png" alt="C logo" />
@@ -147,7 +146,7 @@
     <section id="portfolio" class="portfolio section light-background">
 
       <!-- Section Title -->
-      <div class="container section-title text-center" data-aos="fade-up">
+      <div class="container section-title text-center">
         <h2>Projects</h2>
       </div><!-- End Section Title -->
 
@@ -155,13 +154,13 @@
 
         <div class="isotope-layout" data-default-filter="*" data-layout="fitRows" data-sort="original-order">
 
-          <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
+          <ul class="portfolio-filters isotope-filters">
             <li data-filter=".filter-SartexStudio" class="filter-active"><h6>Sartex Studio</h6></li>
             <li data-filter=".filter-Moki"><h6>Moki's adventure</h6></li>
             <li data-filter=".filter-Prototype"><h6>Prototype for 3D jeans modeling</h6></li>
           </ul>
 
-          <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+          <div class="row gy-4 isotope-container" >
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Prototype">
               <div class="portfolio-content h-100">
@@ -564,7 +563,6 @@
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/typed.js/typed.umd.js"></script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
