--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -73,7 +73,7 @@
 
       <div class="herotitle" >
         <h2>Selim Msolly</h2>
-        <p>I <span class="typed" data-typed-items="play to develop, 'm a Video Game Developer"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>I'm a video game developer</p>
       </div>
 
     </section><!-- /Hero Section -->
