commented the video of hero and removed the animation

--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -66,14 +66,15 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <video autoplay loop muted playsinline class="hero-video">
+      <!-- <video autoplay loop muted playsinline class="hero-video">
         <source src="assets/video/video.mp4" type="video/mp4">
-      </video>
+      </video> -->
       
 
       <div class="herotitle" >
-        <h2>Selim Msolly</h2>
-        <p>I'm a video game developer</p>
+        <h2 style="color: #000000;">Selim Msolly</h2>
+        <!-- <p>I <span class="typed" data-typed-items="play to develop, 'm a Video Game Developer"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p> -->
+         <p>I'm a video game developer</p>
       </div>
 
     </section><!-- /Hero Section -->
