--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -66,7 +66,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <video autoplay loop muted playsinline class="hero-video">
+      <video autoplay loop muted playsinline preload="auto" class="hero-video">
         <source src="assets/video/video.mp4" type="video/mp4">
       </video>
       
