Corrected paragraphs in project details

--- a/myPortfolio/game-details.html
+++ b/myPortfolio/game-details.html
@@ -128,13 +128,13 @@
             <div class="portfolio-description" >
               <h2>About</h2>
               <p style="text-align: justify;">
-                This mini-game fits perfectly into the category of serious games. Created in an industrial context 
-                , the aim of this video game is to simulate the manufacturing processes in 
-                a textile factory, while offering players an interactive and educational experience. The objective 
-                of the game is to make learning about the textile industrial process accessible and fun 
-                while combining entertaining aspects with clear educational objectives. The player embarks on a journey to learn about the steps that transforms pieces of jean fabric
-                into wearable jeans; from dyeing, cutting, sewing and applying laser effetcs. The player faces quizzs, objectives and many other stuff to guide him. Jawher which is the first character
-                the player encouters is an AI character imported from ConvAI and the other characters are from mixamo. The machines in the factory are designed with Blender. 
+                This mini-game fits perfectly into the category of serious games. Created in an industrial context,
+                the aim of this video game is to simulate the manufacturing processes in a textile factory while offering players
+                an interactive and educational experience. The objective of the game is to make learning about the textile industrial process
+                accessible and fun, combining entertaining aspects with clear educational objectives. The player embarks on a journey to learn about
+                the steps that transform pieces of jean fabric into wearable jeans — from dyeing, cutting, sewing, to applying laser effects.
+                The player faces quizzes, objectives, and many other challenges to guide them. Jawher, who is the first character the player encounters,
+                is an AI character imported from ConvAI, and the other characters are from Mixamo. The machines in the factory are designed with Blender. 
               </p>
             </div>
           </div>
