--- a/myPortfolio/portfolio-details.html
+++ b/myPortfolio/portfolio-details.html
@@ -126,14 +126,11 @@
             <div class="portfolio-description" >
               <h2>About</h2>
               <p style="text-align: justify;">
-                This is a 3D software prototype designed for Sartex, a textile factory in Ksar Hlal, Monastir to overcome 
-                the disadvantages of their previous 2D method. In fact, they had This new free prototype offers exceptional realism, a critical aspect 
-                in the presentation of the final product. The designer begins by choosing the 
-                jeans' model. Next, he can modify the model's color either by using the color palette or 
-                by choosing a predefined color. Finally, he chooses a laser effect from the menu or creates a new one
-                , and it is automatically applied to the jeans. By adopting such an approach, 
-                Sartex will finally have its own software and will no longer be dependent on Jeanologia, which 
-                will enable it to make substantial savings.
+                This is a 3D software prototype designed for Sartex, a textile factory in Ksar Hlal, Monastir, to overcome the disadvantages of their previous 2D method.
+                this new free prototype offers exceptional realism, a critical aspect in the presentation of the final product. The designer begins by choosing the jeans model.
+                Next, they can modify the color of the model either by using the color palette or by selecting a predefined color. Finally, they choose a laser effect
+                from the menu or create a new one, which is automatically applied to the jeans. By adopting this approach, Sartex will finally have its own software
+                and will no longer be dependent on Jeanologia, enabling substantial cost savings.
               </p>
             </div>
           </div>
