Changed the word portfolio in navmenu to Projects

--- a/myPortfolio/game-details.html
+++ b/myPortfolio/game-details.html
@@ -54,7 +54,7 @@
       <ul>
         <li><a href="index.html#hero"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="index.html#about"><i class="bi bi-person navicon"></i> About</a></li>
-        <li><a href="index.html#portfolio"><i class="bi bi-images navicon"></i> portfolio</a></li>
+        <li><a href="index.html#portfolio"><i class="bi bi-images navicon"></i> Projects</a></li>
         <li><a href="index.html#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
@@ -132,7 +132,7 @@
                 the aim of this video game is to simulate the manufacturing processes in a textile factory while offering players
                 an interactive and educational experience. The objective of the game is to make learning about the textile industrial process
                 accessible and fun, combining entertaining aspects with clear educational objectives. The player embarks on a journey to learn about
-                the steps that transform pieces of jean fabric into wearable jeans — from dyeing, cutting, sewing, to applying laser effects.
+                the steps that transform pieces of jean fabric into wearable jeans; from dyeing, cutting, sewing, to applying laser effects.
                 The player faces quizzes, objectives, and many other challenges to guide them. Jawher, who is the first character the player encounters,
                 is an AI character imported from ConvAI, and the other characters are from Mixamo. The machines in the factory are designed with Blender. 
               </p>
