--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -503,41 +503,27 @@
         <h2>Contact</h2>
         <p>Should you wish to get in touch, my contact details are provided below.</p>
       </div>
-      <div class="container" >
 
-        <div class="row gy-4">
+      <div class="contact-info">
+        <div class="adresse">
+          <i class="bi bi-geo-alt fs-3"></i>
+          <h5>Address</h5>
+          <p>El-Aouina, Tunis</p>
+        </div>
 
-          <div class="col-lg-5 mx-auto">
+        <div class="phonenumber">
+          <i class="bi bi-telephone fs-3"></i>
+          <h5>Phone number</h5>
+          <p>+216 24 565 808</p>
+        </div>
 
-            <div class="info-wrap">
-              <div class="info-item d-flex" >
-                <i class="bi bi-geo-alt flex-shrink-0"></i>
-                <div>
-                  <h3>Address</h3>
-                  <p>El-Aouina, Tunis</p>
-                </div>
-              </div>
-
-              <div class="info-item d-flex" >
-                <i class="bi bi-telephone flex-shrink-0"></i>
-                <div>
-                  <h3>Phone number</h3>
-                  <p>+216 24 565 808</p>
-                </div>
-              </div>
-
-              <div class="info-item d-flex">
-                <i class="bi bi-envelope flex-shrink-0"></i>
-                <div>
-                  <h3>Email</h3>
-                  <p>msolliselim@gmail.com</p>
-                </div>
-              </div>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21478.60945030756!2d10.252260963259468!3d36.84692090260191!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12e2caa8ffcdd42b%3A0x370637670504b1a5!2sEl%20Aouina%2C%20Tunis!5e0!3m2!1sfr!2stn!4v1751368569731!5m2!1sfr!2stn"></iframe>
-            </div>
-          </div>
+        <div class="mail">
+          <i class="bi bi-envelope fs-3"></i>
+          <h5>Email</h5>
+          <p>msolliselim@gmail.com</p>
         </div>
       </div>
+
     </section>
   </main>
 
