--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -47,7 +47,7 @@
     <div class="social-links text-center">
       <a href="https://github.com/SelimMsolly" class="github" target="_blank"><i class="bi bi-github"></i></a>
       <a href="http://linkedin.com/in/selimmsolly" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-      <a href="https://drive.google.com/file/d/12iZRshXCqMKeW4RT3tg7z69khujbLe-8/view?usp=sharing" class="resume" target="_blank"><i class="bi bi-file-text"></i></a>
+      <a href="https://drive.google.com/file/d/1SdorePyVJ3mozTZLhov1TS3MSqGKAJXB/view?usp=sharing" class="resume" target="_blank"><i class="bi bi-file-text"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -168,7 +168,7 @@
                 <div class="portfolio-info">
                   <h4>jeans modeling</h4>
                   <a href="assets/img/SartexStudio/Prototype1.png" data-gallery="portfolio-gallery-Prototype" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -179,7 +179,7 @@
                 <div class="portfolio-info">
                   <h4>jeans modeling</h4>
                   <a href="assets/img/SartexStudio/Prototype2.png" data-gallery="portfolio-gallery-Prototype" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -190,7 +190,7 @@
                 <div class="portfolio-info">
                   <h4>jeans modeling</h4>
                   <a href="assets/img/SartexStudio/Prototype3.png" data-gallery="portfolio-gallery-Prototype" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -201,7 +201,7 @@
                 <div class="portfolio-info">
                   <h4>jeans modeling</h4>
                   <a href="assets/img/SartexStudio/Prototype4.png" data-gallery="portfolio-gallery-Prototype" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -212,7 +212,7 @@
                 <div class="portfolio-info">
                   <h4>jeans modeling</h4>
                   <a href="assets/img/SartexStudio/Prototype5.png" data-gallery="portfolio-gallery-Prototype" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -223,7 +223,7 @@
                 <div class="portfolio-info">
                   <h4>jeans modeling</h4>
                   <a href="assets/img/SartexStudio/Prototype6.png" data-gallery="portfolio-gallery-Prototype" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -234,7 +234,7 @@
                 <div class="portfolio-info">
                   <h4>jeans modeling</h4>
                   <a href="assets/img/SartexStudio/Prototype7.png" data-gallery="portfolio-gallery-Prototype" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -245,7 +245,7 @@
                 <div class="portfolio-info">
                   <h4>jeans modeling</h4>
                   <a href="assets/img/SartexStudio/Prototype8.png" data-gallery="portfolio-gallery-Prototype" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -256,7 +256,7 @@
                 <div class="portfolio-info">
                   <h4>jeans modeling</h4>
                   <a href="assets/img/SartexStudio/Prototype9.png" data-gallery="portfolio-gallery-Prototype" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -267,7 +267,7 @@
                 <div class="portfolio-info">
                   <h4>jeans modeling</h4>
                   <a href="assets/img/SartexStudio/Prototype10.png" data-gallery="portfolio-gallery-Prototype" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -278,7 +278,7 @@
                 <div class="portfolio-info">
                   <h4>Moki's adventure</h4>
                   <a href="assets/img/Moki/Moki1.png" data-gallery="portfolio-gallery-Moki" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="moki-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="moki-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -289,7 +289,7 @@
                 <div class="portfolio-info">
                   <h4>Moki's adventure</h4>
                   <a href="assets/img/Moki/Moki2.png" data-gallery="portfolio-gallery-Moki" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="moki-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="moki-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -300,7 +300,7 @@
                 <div class="portfolio-info">
                   <h4>Moki's adventure</h4>
                   <a href="assets/img/Moki/Moki3.png" data-gallery="portfolio-gallery-Moki" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="moki-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="moki-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -311,7 +311,7 @@
                 <div class="portfolio-info">
                   <h4>Moki's adventure</h4>
                   <a href="assets/img/Moki/Moki4.png" data-gallery="portfolio-gallery-Moki" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="moki-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="moki-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -322,7 +322,7 @@
                 <div class="portfolio-info">
                   <h4>Moki's adventure</h4>
                   <a href="assets/img/Moki/Moki5.png" data-gallery="portfolio-gallery-Moki" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="moki-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="moki-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -333,7 +333,7 @@
                 <div class="portfolio-info">
                   <h4>Moki's adventure</h4>
                   <a href="assets/img/Moki/Moki6.png" data-gallery="portfolio-gallery-Moki" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="moki-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="moki-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -344,7 +344,7 @@
                 <div class="portfolio-info">
                   <h4>Moki's adventure</h4>
                   <a href="assets/img/Moki/Moki7.png" data-gallery="portfolio-gallery-Moki" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="moki-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="moki-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -355,7 +355,7 @@
                 <div class="portfolio-info">
                   <h4>Moki's adventure</h4>
                   <a href="assets/img/Moki/Moki8.png" data-gallery="portfolio-gallery-Moki" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="moki-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="moki-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -366,7 +366,7 @@
                 <div class="portfolio-info">
                   <h4>Moki's adventure</h4>
                   <a href="assets/img/Moki/Moki9.png" data-gallery="portfolio-gallery-Moki" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="moki-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="moki-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -377,7 +377,7 @@
                 <div class="portfolio-info">
                   <h4>Sartex Studio</h4>
                   <a href="assets/img/Game/Sartex1.png" data-gallery="portfolio-gallery-SartexStudio" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -388,7 +388,7 @@
                 <div class="portfolio-info">
                   <h4>Sartex Studio</h4>
                   <a href="assets/img/Game/Sartex2.png" data-gallery="portfolio-gallery-SartexStudio" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -399,7 +399,7 @@
                 <div class="portfolio-info">
                   <h4>Sartex Studio</h4>
                   <a href="assets/img/Game/Sartex3.png" data-gallery="portfolio-gallery-SartexStudio" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -410,7 +410,7 @@
                 <div class="portfolio-info">
                   <h4>Sartex Studio</h4>
                   <a href="assets/img/Game/Sartex4.png" data-gallery="portfolio-gallery-SartexStudio" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -421,7 +421,7 @@
                 <div class="portfolio-info">
                   <h4>Sartex Studio</h4>
                   <a href="assets/img/Game/Sartex5.png" data-gallery="portfolio-gallery-SartexStudio" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -432,7 +432,7 @@
                 <div class="portfolio-info">
                   <h4>Sartex Studio</h4>
                   <a href="assets/img/Game/Sartex6.png" data-gallery="portfolio-gallery-SartexStudio" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -443,7 +443,7 @@
                 <div class="portfolio-info">
                   <h4>Sartex Studio</h4>
                   <a href="assets/img/Game/Sartex7.png" data-gallery="portfolio-gallery-SartexStudio" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -454,7 +454,7 @@
                 <div class="portfolio-info">
                   <h4>Sartex Studio</h4>
                   <a href="assets/img/Game/Sartex8.png" data-gallery="portfolio-gallery-SartexStudio" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -465,7 +465,7 @@
                 <div class="portfolio-info">
                   <h4>Sartex Studio</h4>
                   <a href="assets/img/Game/Sartex9.png" data-gallery="portfolio-gallery-SartexStudio" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -476,7 +476,7 @@
                 <div class="portfolio-info">
                   <h4>Sartex Studio</h4>
                   <a href="assets/img/Game/Sartex10.png" data-gallery="portfolio-gallery-SartexStudio" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -487,7 +487,7 @@
                 <div class="portfolio-info">
                   <h4>Sartex Studio</h4>
                   <a href="assets/img/Game/Sartex11.png" data-gallery="portfolio-gallery-SartexStudio" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="game-details.html" title="More Details" class="details-link"><i class="bi bi-info-circle"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -508,15 +508,13 @@
         <div class="adresse">
           <i class="bi bi-geo-alt fs-3"></i>
           <h5>Address</h5>
-          <p>El-Aouina, Tunis</p>
+          <p>L'Aouina, Tunis</p>
         </div>
-
         <div class="phonenumber">
           <i class="bi bi-telephone fs-3"></i>
           <h5>Phone number</h5>
           <p>+216 24 565 808</p>
         </div>
-
         <div class="mail">
           <i class="bi bi-envelope fs-3"></i>
           <h5>Email</h5>
