Updated the mobile version and optimized the overall code

--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -89,7 +89,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/myImage.jpg" class="img-fluid" alt="" style="max-width: 250px; height: auto; border: 5px solid #000000; border-radius: 8px;">
+            <img src="assets/img/myImage.jpg" class="hero-img">
           </div>
 
           <div class="col-lg-8 content">
@@ -145,7 +145,7 @@
     <section id="portfolio" class="portfolio section light-background">
 
       <!-- Section Title -->
-      <div class="container section-title text-center">
+      <div class="container section-title text-center projects-title">
         <h2>Projects</h2>
       </div><!-- End Section Title -->
 
@@ -154,9 +154,9 @@
         <div class="isotope-layout" data-default-filter="*" data-layout="fitRows" data-sort="original-order">
 
           <ul class="portfolio-filters isotope-filters">
-            <li data-filter=".filter-SartexStudio" class="filter-active"><h6>Sartex Studio</h6></li>
-            <li data-filter=".filter-Moki"><h6>Moki's adventure</h6></li>
-            <li data-filter=".filter-Prototype"><h6>Prototype for 3D jeans modeling</h6></li>
+            <li data-filter=".filter-SartexStudio" class="filter-active">Sartex Studio</li>
+            <li data-filter=".filter-Moki">Moki's adventure</li>
+            <li data-filter=".filter-Prototype">Prototype for 3D jeans modeling</li>
           </ul>
 
           <div class="row gy-4 isotope-container" >
