--- a/myPortfolio/game-details.html
+++ b/myPortfolio/game-details.html
@@ -84,36 +84,10 @@
         <div class="row gy-4">
 
           <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper init-swiper">
-
-              <script type="application/json" class="swiper-config">
-                {
-                  "loop": true,
-                  "speed": 600,
-                  "autoplay": {
-                    "delay": 5000
-                  },
-                  "slidesPerView": "auto",
-                  "pagination": {
-                    "el": ".swiper-pagination",
-                    "type": "bullets",
-                    "clickable": true
-                  }
-                }
-              </script>
-
-              <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide" style="border: 5px solid #000000; padding: 10px; border-radius: 10px;">
-                  <div class="swiper-slide">
-                    <iframe src="https://drive.google.com/file/d/1eytsHQ6biVaq0ZAWQaEJcXx-lHX5Y3Oi/preview" width="100%" height="500px" allowfullscreen></iframe>
-                  </div>
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
+            <div class="game-video">
+              <iframe src="https://drive.google.com/file/d/1eytsHQ6biVaq0ZAWQaEJcXx-lHX5Y3Oi/preview" allowfullscreen></iframe>                
             </div>
-          </div>
+         </div>
 
           <div class="col-lg-4">
             <div class="portfolio-info">
