Updated the background of the hero section on the mobile

--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -72,7 +72,7 @@
 
       <div class="herotitle">
         <h2>Selim Msolly</h2>
-        <p>I <span class="typed" data-typed-items="play to develop, 'm a Video Game Developer"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p><span class="typed" data-typed-items="Play to Develop, Game Developer"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
