--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -31,17 +31,12 @@
 
 <body class="index-page">
 
-<div class="custom-vertical-line"></div>
-
 
   <header id="header" class="header dark-background d-flex flex-column">
     <i class="header-toggle d-xl-none bi bi-list"></i>
-      <a href="index.html#hero">
-        <img src="assets/img/manette.png" width="90px" height="auto" style="margin-left: 90px;">
-      </a>
 
     <a href="index.html#hero" class="logo d-flex align-items-center justify-content-center">
-      <h1 class="sitename" style ="color: #000000;">Selim Msolly</h1>
+      <h1 class="sitename" style="margin-top: 20px;">Selim Msolly</h1>
     </a>
 
     <div class="social-links text-center">
@@ -52,7 +47,7 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
+        <li><a href="#hero" class="active"><i class="bi bi-house navicon" ></i>Home</a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Projects</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
@@ -66,9 +61,13 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <video autoplay loop muted playsinline preload="auto" class="hero-video">
+      <!-- <video autoplay loop muted playsinline preload="auto" class="hero-video">
         <source src="assets/video/video.mp4" type="video/mp4">
-      </video>
+      </video> -->
+
+      <div class="hero-background">
+        <img src="assets/img/desktopBackground.jpg">
+      </div>
 
       <div class="herotitle">
         <h2>Selim Msolly</h2>
@@ -81,8 +80,8 @@
     <section id="about" class="about section">
       <!-- Section Title -->
       <div class="container section-title text-center">
-        <h2>About</h2>
-        <p>I'm a Teleinformatics Engineer with a solid background in networking and programming. Passionate about video game development, with hands-on experience in game engines; Unity and Unreal Engine. Eager to merge technical expertise with innovative problem-solving techniques to build immersive gaming experiences. Always learning, always growing.</p>
+        <h2 style="color:rgb(255, 255, 255);">About</h2>
+        <p style="color:rgb(255, 255, 255);">I'm a Teleinformatics Engineer with a solid background in networking and programming. Passionate about video game development, with hands-on experience in game engines; Unity and Unreal Engine. Eager to merge technical expertise with innovative problem-solving techniques to build immersive gaming experiences. Always learning, always growing.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -93,14 +92,14 @@
           </div>
 
           <div class="col-lg-8 content">
-            <h2 class="titlePosition" style="margin-left: 250px; margin-top: 60px;">Video Game Developer</h2>
+            <h2 class="titlePosition" style="margin-left: 50px; margin-top: 60px; color: white;">Video Game Developer</h2>
             <br>
               <div class="col-lg-12">
                 <ul>
-                  <li style="margin-left: 130px;"><i class="bi bi-chevron-right"></i><span>Excellent attention to detail</span></li>
-                  <li style="margin-left: 130px;"><i class="bi bi-chevron-right"></i> <span>Bug tracking and documentation skills</span></li>
-                  <li style="margin-left: 130px;"><i class="bi bi-chevron-right"></i> <span>Strong communication skills</span></li>
-                  <li style="margin-left: 130px;"><i class="bi bi-chevron-right"></i> <span>Teamwork abilitiy</span></li>
+                  <li style="margin-left: 2px; color: white;"><i class="bi bi-chevron-right"></i><span>Excellent attention to detail</span></li>
+                  <li style="margin-left: 2px; color: white;"><i class="bi bi-chevron-right"></i> <span>Bug tracking and documentation skills</span></li>
+                  <li style="margin-left: 2px; color: white;"><i class="bi bi-chevron-right"></i> <span>Strong communication skills</span></li>
+                  <li style="margin-left: 2px; color: white;"><i class="bi bi-chevron-right"></i> <span>Teamwork abilitiy</span></li>
                 </ul>
               </div>
           </div>
@@ -110,10 +109,8 @@
       <br>
       <br>
       <br>
-
-      
       <div class="container section-title text-center">
-        <h2>Languages and tools</h2>
+        <h2 style="color:rgb(255, 255, 255);">Languages and Tools</h2>
       </div>
 
       <div class="portfolio-wrapper">
@@ -146,7 +143,7 @@
 
       <!-- Section Title -->
       <div class="container section-title text-center projects-title">
-        <h2>Projects</h2>
+        <h2 style="color:rgb(255, 255, 255);">Projects</h2>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -154,9 +151,9 @@
         <div class="isotope-layout" data-default-filter="*" data-layout="fitRows" data-sort="original-order">
 
           <ul class="portfolio-filters isotope-filters">
-            <li data-filter=".filter-SartexStudio" class="filter-active">Sartex Studio</li>
-            <li data-filter=".filter-Moki">Moki's adventure</li>
-            <li data-filter=".filter-Prototype">Prototype for 3D jeans modeling</li>
+            <li data-filter=".filter-SartexStudio" class="filter-active" style="color: white;">Sartex Studio</li>
+            <li data-filter=".filter-Moki" style="color: white;">Moki's adventure</li>
+            <li data-filter=".filter-Prototype" style="color: white;">Prototype for 3D jeans modeling</li>
           </ul>
 
           <div class="row gy-4 isotope-container" >
@@ -499,25 +496,25 @@
     <!-- Contact Section  -->
     <section id="contact" class="contact section">
       <div class="container custom-container section-title text-center">
-        <h2>Contact</h2>
-        <p>Should you wish to get in touch, my contact details are provided below.</p>
+        <h2 style="color:rgb(255, 255, 255);">Contact</h2>
+        <p style="color:rgb(255, 255, 255);">Should you wish to get in touch, my contact details are provided below.</p>
       </div>
 
       <div class="contact-info">
         <div class="adresse">
-          <i class="bi bi-geo-alt fs-3"></i>
-          <h5>Address</h5>
-          <p>L'Aouina, Tunis</p>
+          <i class="bi bi-geo-alt fs-3" style="color: white;"></i>
+          <h5 style="color:rgb(255, 255, 255);">Address</h5>
+          <p style="color:rgb(255, 255, 255);">L'Aouina, Tunis</p>
         </div>
         <div class="phonenumber">
-          <i class="bi bi-telephone fs-3"></i>
-          <h5>Phone number</h5>
-          <p>+216 24 565 808</p>
+          <i class="bi bi-telephone fs-3" style="color: white;"></i>
+          <h5 style="color:rgb(255, 255, 255);">Phone number</h5>
+          <p style="color:rgb(255, 255, 255);">+216 24 565 808</p>
         </div>
         <div class="mail">
-          <i class="bi bi-envelope fs-3"></i>
-          <h5>Email</h5>
-          <p>msolliselim@gmail.com</p>
+          <i class="bi bi-envelope fs-3" style="color: white;"></i>
+          <h5 style="color:rgb(255, 255, 255);">Email</h5>
+          <p style="color:rgb(255, 255, 255);">msolliselim@gmail.com</p>
         </div>
       </div>
 
