--- a/myPortfolio/moki-details.html
+++ b/myPortfolio/moki-details.html
@@ -34,15 +34,8 @@
 
   <header id="header" class="header dark-background d-flex flex-column">
     <i class="header-toggle d-xl-none bi bi-list"></i>
-
-      <a href="index.html#hero">
-        <img src="assets/img/manette.png" width="90px" height="auto" style="margin-left: 90px;">
-      </a>
-
-
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      
-      <h1 class="sitename" style ="color: #000000;">Selim Msolly</h1>
+      <h1 class="sitename" style ="color: #ffffff; margin-top: 20px;">Selim Msolly</h1>
     </a>
 
     <div class="social-links text-center">
@@ -65,13 +58,13 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title" style="background-color: #FFE6D0;">
+    <div class="page-title" style="background-color: #000000;">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Project Details</h1>
+        <h1 class="mb-2 mb-lg-0" style="color: white;">Project Details</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current"  style ="color: #000000;">Project Details</li>
+            <li class="current"  style ="color: #ffffff;">Project Details</li>
           </ol>
         </nav>
       </div>
