--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/manette.png" rel="icon">
+  <link href="assets/img/myImage.jpg" rel="icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
 
