--- a/myPortfolio/portfolio-details.html
+++ b/myPortfolio/portfolio-details.html
@@ -9,7 +9,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/manette.png" rel="icon">
+  <link href="assets/img/myImage.jpg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
