--- a/myPortfolio/moki-details.html
+++ b/myPortfolio/moki-details.html
@@ -142,7 +142,7 @@
             <div class="portfolio-info" >
               <h3>Project information</h3>
               <ul>
-                <li><strong>Role</strong>: Gameplay Programmer</li>
+                <li><strong>Role</strong>: Unity Game Developer</li>
                 <li><strong>Tools</strong>: C#</li>
                 <li><strong>Team Size</strong>: 1</li>
                 <li><strong>Time Frame</strong>: Currently in development</li>
